--- a/TwoSample_Mendelian_Randomization.ipynb
+++ b/TwoSample_Mendelian_Randomization.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPSzOawfN2bT3lXVYphJtX6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,6 +105,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "In Mendelian randomization (MR), the terms exposure and outcome refer to the variables you are studying to assess causal relationships. Here's what they mean:\n",
+        "\n",
+        "**Exposure:**\n",
+        "This is the variable of interest that you suspect might influence or cause changes in another variable. It could be something like a lifestyle factor (e.g., smoking, alcohol consumption), a biomarker (e.g., blood pressure, cholesterol levels), or any other factor that you believe could have a causal effect on a health outcome. In MR, the exposure is usually defined by genetic variants (such as single nucleotide polymorphisms or SNPs) that are associated with the risk factor of interest.\n",
+        "\n",
+        "**Outcome:**\n",
+        "This is the health condition or trait you are trying to understand or explain. The outcome could be a disease (e.g., heart disease, diabetes) or any other phenotype you are studying (e.g., body mass index, blood sugar levels). In MR, the goal is to see if the genetic variants associated with the exposure influence the outcome, thus suggesting a causal effect."
+      ],
+      "metadata": {
+        "id": "2hB5yMPCOpHT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Resources**\n",
         "\n",
         "**Database:** This database containing thousands of complete GWAS summary statistics, making it easier to access and utilize the data for analysis. https://gwas.mrcieu.ac.uk/\n",
@@ -154,7 +168,7 @@
         "id": "fb8zE7rSD7vB",
         "outputId": "737db98a-b54c-4c04-e5e6-6b9af4e24e4a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +216,7 @@
       "metadata": {
         "id": "XVVhEg0rEC3G"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +247,7 @@
         "id": "zycyrF8lEWs7",
         "outputId": "26fa4865-a927-42ec-9883-6dc1d07252e1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +350,7 @@
         "id": "jLzFLqTdEmDr",
         "outputId": "683ff7e3-a608-4efc-fb6c-bab639a3118d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +415,7 @@
         "id": "b6UOV4bgEoSA",
         "outputId": "2d5e6077-466b-4c6f-e6fe-51a063121938"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +457,7 @@
         "id": "hQTYwrMUHBr3",
         "outputId": "da08b241-3395-4851-fcae-3247d6f333aa"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +497,7 @@
         "id": "tsNZzBihHHVz",
         "outputId": "0a1065d6-fa03-46ad-c8f7-baa2cff6d733"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +575,7 @@
         "id": "yTNFgUrbHNwC",
         "outputId": "b51af656-0d0c-471d-9797-becbefde45af"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -702,7 +716,7 @@
         "id": "0KmQyBx0HPMV",
         "outputId": "7a0ab2b6-a21b-4c8e-9271-87d73a65ed67"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +797,7 @@
         "id": "LgcHA7_yHbqu",
         "outputId": "39b51d5d-3c88-4c1f-8243-ec83b14db834"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -841,7 +855,7 @@
         "id": "GY0DugYeHdJa",
         "outputId": "2ba375d2-cdde-47e2-81c1-b865390e85c4"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,7 +915,7 @@
         "id": "dc4MPNlVHgRw",
         "outputId": "763aac2d-14ba-42f1-dbd6-dff2d2040ff2"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -957,7 +971,7 @@
       "metadata": {
         "id": "ES-2EmffHnbH"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,7 +993,7 @@
       "metadata": {
         "id": "0MYH2hVXHqOO"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -999,7 +1013,7 @@
       "metadata": {
         "id": "7vFNZaFIHrmY"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1048,7 @@
       "metadata": {
         "id": "ouAzh5mRHxQU"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1088,7 +1102,7 @@
         "id": "3mlQgOhAH14X",
         "outputId": "e254eb93-ed66-4f57-c0c9-c4cf58cef308"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,7 +1136,7 @@
         "id": "-q7Yp4axH-x1",
         "outputId": "dfae7aaf-c8f2-4b48-8de5-97231b27ef59"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1164,7 +1178,7 @@
         "id": "zDEUDmQdIB0m",
         "outputId": "66aef4bd-6403-4b68-c773-324d2e23d0a7"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1206,7 +1220,7 @@
         "id": "N7Of7tzEIHbH",
         "outputId": "822dfb31-238d-4bff-e4e3-d75ad78ea72c"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1269,7 +1283,7 @@
         "id": "S2BeaP1HIVln",
         "outputId": "78d0c402-1bbe-4e3f-d590-23f042b799a7"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1340,7 @@
         "id": "ooayn6O1Ie16",
         "outputId": "1b69f4ab-5ec2-4b04-8e6e-e5be8872cad6"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1403,7 @@
         "id": "oKTrwOFVInk1",
         "outputId": "4e2aaf28-8fc9-432e-adfd-a372570d7259"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1478,7 @@
         "id": "pPyXM_RcIw9M",
         "outputId": "ead280ac-03ab-4cfa-dacc-3c2e3fb7454e"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1514,7 +1528,7 @@
         "id": "WyNhOSBnI15_",
         "outputId": "e89f41cc-cf5c-4968-883b-e9b36499e8b6"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1567,7 +1581,7 @@
         "id": "6LaxIsjDU3cZ",
         "outputId": "c20e360d-64e8-42f1-dca6-677cf8afd945"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1665,7 +1679,7 @@
         "id": "wgSn9L4tVZAk",
         "outputId": "7d386b7c-8147-4200-fe59-84ab21ec52d6"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
